[tool.poetry]
name = "pskcontext"
version = "0.0.1"
description = "Python SSLContext subclass that enables PSK SSL communication"
authors = ["Martin Storgaard Dieu <martin@storgaarddieu.com>"]
readme = "README.md"
include = [
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
